--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ p{
     <div class="layer big"></div>
   </div>
 
-  <h2>Happy Birthday!💕</h2>
+  <h2>Happy Birthday Riaa!💕</h2>
   <p>today is your special day 🎂</p>
 
   <a href="page2.html" class="btn">Next Surprise 🎁</a>
@@ -212,3 +212,4 @@ p{
 
 </body>
 </html>
+
